--- a/server/package.json
+++ b/server/package.json
@@ -24,12 +24,14 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/mongoose": "^10.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^7.0.11",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "express-jwt": "^8.4.1",
     "jwks-rsa": "^3.0.1",
+    "mongoose": "^7.3.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
