--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "express-jwt": "^8.4.1",
     "jwks-rsa": "^3.0.1",
     "mongoose": "^7.3.1",
+    "nestjs-i18n": "^10.2.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
