--- a/server/package.json
+++ b/server/package.json
@@ -21,44 +21,51 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
+    "@apollo/server": "^4.9.1",
+    "@nestjs/apollo": "^12.0.7",
+    "@nestjs/common": "^10.1.3",
     "@nestjs/config": "^3.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/mongoose": "^10.0.0",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/swagger": "^7.0.11",
+    "@nestjs/core": "^10.1.3",
+    "@nestjs/graphql": "^12.0.8",
+    "@nestjs/mongoose": "^10.0.1",
+    "@nestjs/platform-express": "^10.1.3",
+    "@nestjs/swagger": "^7.1.8",
+    "@nestjs/typeorm": "^10.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "express-jwt": "^8.4.1",
+    "graphql": "^16.7.1",
     "jwks-rsa": "^3.0.1",
-    "mongoose": "^7.3.1",
+    "mongoose": "^7.4.3",
     "nestjs-i18n": "^10.2.6",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rimraf": "^5.0.1",
+    "rxjs": "^7.8.1",
+    "ts-morph": "^19.0.0",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
-    "@types/express": "^4.17.13",
-    "@types/jest": "27.5.0",
-    "@types/node": "^16.0.0",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "28.0.3",
-    "prettier": "^2.3.2",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "28.0.1",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.0.0",
-    "typescript": "^4.3.5"
+    "@nestjs/cli": "^10.1.11",
+    "@nestjs/schematics": "^10.0.2",
+    "@nestjs/testing": "^10.1.3",
+    "@types/express": "^4.17.17",
+    "@types/jest": "29.5.3",
+    "@types/node": "^20.5.0",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0",
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "jest": "29.6.2",
+    "prettier": "^3.0.1",
+    "source-map-support": "^0.5.21",
+    "supertest": "^6.3.3",
+    "ts-jest": "29.1.1",
+    "ts-loader": "^9.4.4",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "4.2.0",
+    "typescript": "^5.1.6"
   },
   "jest": {
     "moduleFileExtensions": [
